2024-12-11T01:04:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12267620596 # 506
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-11
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 127 353 / 128 355
* notice: next accum: outdated-unq outdated-all / unq all: 128 355 / 129 356
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-10-28] / [2024-12-10]

2024-10-31T00:59:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11604165407 # 465
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-31
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 126 352 / 128 355
* notice: next accum: outdated-unq outdated-all / unq all: 127 353 / 128 355
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-10-16] / []

2024-10-29T00:59:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11565293081 # 463
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-29
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 126 352 / 127 353
* notice: next accum: outdated-unq outdated-all / unq all: 126 352 / 128 355
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-10-28]

2024-10-17T00:58:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11376361829 # 451