@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2024-12-11T01:04:18Z",
+  "timestamp" : "2024-12-23T01:00:15Z",
   "count_outdated" : 355,
   "uniques_outdated" : 128,
-  "count" : 356,
-  "uniques" : 129,
+  "count" : 363,
+  "uniques" : 130,
   "views" : [
     {
       "timestamp": "2024-12-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-22T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
+      "count_decinc": [ 0, 7 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
