@@ -1,10 +1,15 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 8,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2024-12-10T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-22T00:00:00Z",
+      "count": 7,
       "uniques": 1
     }
   ]
