@@ -1,3 +1,12 @@
+2024-12-23T01:00:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12459291836 # 518
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-23
+* notice: last 14d: unq all: 2 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 128 355 / 129 356
+* notice: next accum: outdated-unq outdated-all / unq all: 128 355 / 130 363
+* notice: prev exec diff / last date diff / accum: unq all: +1 +7 -0 -0 / +1 +7 -0 -0 / 1 7
+* notice: removed / changed dates: [] / [2024-12-22]
+
 2024-12-11T01:04:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12267620596 # 506
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-11
